# ts-vreath-core

./: README.md  index.js  index.ts  package-lock.json  package.json
ffi-vreath/: README.md  package-lock.json  package.json
ffi-vreath/lib/: index.js
ffi-vreath/native/: Cargo.toml  build.rs
ffi-vreath/native/src/: crypto.rs  lib.rs
src/: basic.js  basic.ts  block.js  block.ts  con.js  con.ts  constant.js  constant.ts  contract.js  contract.ts  crypto_set.js  crypto_set.ts  data.js  data.ts  db.js  db.ts  diff.js  diff.ts  error.js  error.ts  finalize.js  finalize.ts  lock.js  lock.ts  lwma.js  lwma.ts  merkle_patricia.js  merkle_patricia.ts  result.js  result.ts  state.js  state.ts  tx.js  tx.ts  tx_pool.js  tx_pool.ts  types.js  types.ts  unit.js  unit.ts  (+2 more)
src/contract/: basic.js  basic.ts  ethereum.js  ethereum.ts  index.js  index.ts  native.js  native.ts  unit.js  unit.ts
test/: com.js  com.ts  data_test.js  data_test.ts  db_test.js  db_test.ts  merkle_patricia_test.js  merkle_patricia_test.ts
